# filesentinel

./: CMakeLists.txt  README.md
include/: filesentinel.hpp
src/: filesentinel.cpp
